--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "axios": "^0.21.1",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
@@ -15,10 +18,15 @@
     "react-dom": "^16.6.3",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "shards-react": "^1.0.0",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
